--- a/graph.html
+++ b/graph.html
@@ -16,7 +16,7 @@
     <body>
         <a href="index.html">Back</a>
         <center>
-            <h1>Graph drawer</h1>
+            <h1>Graph "drawer"</h1>
         </center>
         <hr/>
         Enter usernames in the left box, separate with ',' <br/>
