update Biology/Geography Selection

--- a/exam.html
+++ b/exam.html
@@ -22,6 +22,7 @@
         <hr/>
         Hover on a subject to see its maximum score <br/>
         Hover on a cell to see its percentage score <br/>
+        *Biology/Geography's subject depends on one's selection
         <hr/>
         <table id="data" width="80%" class="table table-striped table-bordered table-hover"></table>
         <hr/>
