--- a/examList.html
+++ b/examList.html
@@ -32,6 +32,9 @@
         var html="";
         for(var i=exams.length-1;i>=0;i--){
             html+='<a class="fa fa-'+exams[i].icon+'" href="exam.html?'+i+'">'+exams[i].name+'</a><br/>';
+            if(exams[i].newSplit!=undefined){
+                html+="<h3>↑"+exams[i].newSplit+"</h3>"
+            }
         }
 
         document.getElementById("data").innerHTML=html;
